# jarvis

./: .env.example  .gitignore  AI_GENERATION_STANDARD.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/database/: memory.json
docs/architecture/: HOW_TO_START.md  JARVIS_ARCHITECTURE_VISION.md  JARVIS_ROADMAP.md  NON_GOALS.md
src/: bootstrap.py  main.py
src/core/: command_router.py  config.py  events.py  logger.py  orchestrator.py  shell.py
src/core/ai/: claude_provider.py  context.py  context_loader.py  context_manager.py  conversation.py  conversation_manager.py  message.py  prompt.py  prompt_builder.py  prompt_manager.py  provider.py  provider_factory.py  provider_manager.py  provider_registry.py
src/core/execution/: engine.py  executor.py  models.py  process_registry.py
src/core/memory/: context.py  memory_persistence.py  memory_store.py
src/modules/: ai_module.py  conversation_module.py  fast_response_module.py  invoice_module.py  memory_module.py  plugin_module.py  process_module.py  scheduler_module.py  system_module.py  telegram_module.py  test_module.py  workflow_module.py
src/services/: ai_results.py  ai_service.py  fast_response_service.py  invoice_service.py  memory_service.py  plugin_service.py  process_service.py  scheduler_service.py  telegram_service.py  workflow_service.py
src/testing/: __init__.py  base_test.py  registry.py  report.py  result.py  runner.py
src/utils/: constants.py
tests/EP001/: test_foundation.py
tests/EP002/: test_shell.py
tests/EP003/: test_execution_engine.py
(+22 files in other folders)
